# spaceman

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md
blossom_cli/: Cargo.toml
blossom_cli/src/: main.rs
blossom_core/: Cargo.toml
blossom_core/src/: ca_verifier.rs  codec.rs  lib.rs  metadata.rs  repo.rs  tls.rs
blossom_gui/: .gitignore  index.html  package.json
blossom_gui/src/: App.svelte  style.css
blossom_gui/src-tauri/: Cargo.toml  tauri.conf.json
blossom_gui_back/: Cargo.toml  tauri.conf.json
blossom_gui_back/icons/: icon.icns
blossom_gui_back/src/: main.rs
blossom_gui_backend/: Cargo.toml  tauri.conf.json
blossom_gui_backend/src/: main.rs
blossom_gui_front/: Cargo.toml  index.html
blossom_gui_front/src/: call.rs  command.rs  commands.rs  glue.rs  invoke.rs  main.rs  style.css  style.scss
blossom_gui_front/src/components/: button.rs  errors.rs  metadata_editor.rs  mod.rs  pane.rs  repo.rs  settings.rs
blossom_gui_frontend/: Cargo.toml  index.html
blossom_gui_frontend/src/: main.rs
blossom_tui/: Cargo.toml
blossom_types/: Cargo.toml
blossom_types/src/: endpoint.rs  lib.rs  repo.rs  settings.rs
playground/: Cargo.toml  build.rs
playground/proto/: gen_descriptor.sh  playground.proto
playground/src/: main.rs
playground/tls/: ca-cert.pem  ca-cert.srl  ca-key.pem  ext.cnf  gen-ca.sh  gen-server.sh  server-cert.pem  server-key.pem  server-req.pem  sign.sh
redis/: Cargo.toml  build.rs
redis/proto/: gen_descriptor.sh  redis.proto
redis/src/: main.rs
spaceman_cli/: Cargo.toml
spaceman_cli/src/: main.rs
spaceman_core/: Cargo.toml
spaceman_core/src/: lib.rs  repo.rs  tls.rs
spaceman_gui_back/: Cargo.toml  tauri.conf.json
spaceman_gui_back/src/: main.rs
spaceman_gui_front/: Cargo.toml  index.html
spaceman_gui_front/src/: call.rs  commands.rs  glue.rs  main.rs  style.scss
spaceman_gui_front/src/components/: button.rs  repo.rs  settings.rs
spaceman_types/: Cargo.toml
spaceman_types/src/: callopout.rs  repo.rs  settings.rs
src/: blossom.rs  ca_verifier.rs  codec.rs  main.rs  metadata.rs
