[package]
authors = ["Elia Perantoni"]
description = "A client for testing gRPC services"
name = "blossom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["default", "derive"] }
colored = "2.0.0"
futures = "0.3.21"
prost-reflect = { version = "0.9.0", features = ["serde"] }
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
tonic = { version = "0.8.0", features = ["default", "tls", "tls-roots"] }
