[package]
authors = ["Elia Perantoni"]
description = "A client for testing gRPC services"

name = "blossom_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["default", "derive"] }
colored = "2.0.0"

[dependencies.blossom_core]
path = "../blossom_core"

# Serde
[dependencies.serde]
version = "1.0.140"
[dependencies.serde_json]
version = "1.0.82"

# Async
[dependencies.tokio]
version = "1.20.1"
features = ["full"]
[dependencies.tokio-stream]
version = "0.1.9"
[dependencies.futures]
version = "0.3.21"
