[package]
name = "blossom_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.145", features = ["derive"] }

# gRPC
[dependencies.prost-reflect]
version = "0.9.0"
features = ["serde"]
[dependencies.tonic]
version = "0.8.0"

# TLS
[dependencies.rustls]
version = "0.20.6"
features = ["dangerous_configuration"]
[dependencies.rustls-pemfile]
version = "1.0.1"

# HTTP
[dependencies.http]
version = "0.2.8"
[dependencies.hyper]
version = "0.14.20"
features = ["client", "http2"]
[dependencies.hyper-rustls]
version = "0.23.0"
features = ["default", "http2"]

# Async
[dependencies.tokio]
version = "1.20.1"
features = ["full"]
[dependencies.futures]
version = "0.3.21"
[dependencies.tower]
version = "0.4.13"
