[package]
name = "blossom_gui_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
bincode = "1.3.3"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
serde = "1.0.145"
serde_json = "1.0.85"

[dependencies.blossom_types]
path = "../blossom_types"
