[package]
name = "blossom_gui_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
bincode = "1.3.3"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["CssStyleDeclaration"] }
wasm-bindgen-futures = "0.4.33"
serde = "1.0.145"
serde_json = "1.0.85"
futures = "0.3.25"
futures-ext = "0.0.0"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-timers = "0.2.6"
slab = "0.4.8"

[dependencies.blossom_types]
path = "../blossom_types"
