[package]
authors = ["Elia Perantoni"]
description = "A client for testing gRPC services"

name = "blossom_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.blossom_core]
path = "../blossom_core"
