[package]
name = "spaceman_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "js", "serde"] }
